--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
+        npm install
+        npm run build
         docker build . --file Dockerfile --tag my-image-name:build
         docker push my-image-name:build
