--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config ./src/client/webpack.dev.js",
+    "start": "webpack serve --config ./src/client/webpack.dev.js",
     "build": "webpack --config ./src/client/webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
