--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config ./src/client/webpack.dev.js",
-    "build": "webpack --config ./src/client/webpack.prod.js",
+    "start": "webpack serve --config ./src/webpack.dev.js",
+    "build": "webpack --config ./src/webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/three": "^0.133.1",
-    "tree": "^0.1.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.59.1",
