--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config ./src/webpack.dev.js",
-    "build": "webpack --config ./src/webpack.prod.js",
+    "start": "webpack serve --config ./webpack.dev.js",
+    "build": "webpack --config ./webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "three": "^0.133.1"
+    "three": "^0.133.1",
+    "uuid": "^8.3.2"
   }
 }
