--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pexeltest",
+  "name": "pkhood",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "three": "^0.133.1",
     "uuid": "^8.3.2"
   }
