--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "html-webpack-plugin": "^5.5.0",
     "three": "^0.133.1",
+    "util": "^0.12.4",
     "uuid": "^8.3.2"
   }
 }
